--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
+    "idb": "^8.0.3",
     "music-metadata": "^11.10.5",
     "next": "16.1.1",
     "pnpm": "^10.27.0",
