--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "idb": "^8.0.3",
+    "lucide-react": "^0.562.0",
     "music-metadata": "^11.10.5",
     "next": "16.1.1",
     "pnpm": "^10.27.0",
@@ -26,6 +27,7 @@
     "@types/wicg-file-system-access": "^2023.10.7",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "sass": "^1.97.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
