--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-lrc": "^3.2.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/jsmediatags": "^3.9.6",
     "@types/node": "^20",
@@ -29,6 +30,7 @@
     "@types/wicg-file-system-access": "^2023.10.7",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "sass": "^1.97.2",
     "tailwindcss": "^4",
     "typescript": "^5"
